feat login use case and exceptsfor login

--- a/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.resx
+++ b/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.resx
@@ -132,4 +132,7 @@
     <value>The price is mery high
 </value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>E-mail or password is invalid</value>
+  </data>
 </root>
