--- a/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.resx
+++ b/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.resx
@@ -135,4 +135,13 @@
   <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
     <value>E-mail or password is invalid</value>
   </data>
+  <data name="USER_IDENTIFIER_NOT_EXISTS" xml:space="preserve">
+    <value>this user token doesn't exists</value>
+  </data>
+  <data name="EXPIRED_TOKEN" xml:space="preserve">
+    <value>Token is expired</value>
+  </data>
+  <data name="USER_DOESNT_EXISTS" xml:space="preserve">
+    <value>User doesn't exists</value>
+  </data>
 </root>
