get method add and verify tokens

--- a/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.pt-BR.resx
+++ b/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.pt-BR.resx
@@ -141,4 +141,7 @@
   <data name="USER_DOESNT_EXISTS" xml:space="preserve">
     <value>O usuario não existe</value>
   </data>
+  <data name="NO_TOKEN" xml:space="preserve">
+    <value>Sem token nos headers</value>
+  </data>
 </root>
