--- a/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.resx
+++ b/src/shared/ProjectAspNet.Exceptions/Exceptions/ResourceExceptMessages.resx
@@ -144,4 +144,8 @@
   <data name="USER_DOESNT_EXISTS" xml:space="preserve">
     <value>User doesn't exists</value>
   </data>
+  <data name="NO_TOKEN" xml:space="preserve">
+    <value>No token on headers
+</value>
+  </data>
 </root>
